[gd_scene load_steps=16 format=3 uid="uid://msq6w1qgh7c6"]

[ext_resource type="PackedScene" uid="uid://dvs73k0tkjij4" path="res://packedscenes/creatures/creature.tscn" id="1_4xi5x"]
[ext_resource type="Script" path="res://scripts/Player_Refactor.gd" id="2_f7rlf"]
[ext_resource type="Script" path="res://scripts/Locomotor.gd" id="3_7v3rj"]
[ext_resource type="AudioStream" uid="uid://mkfbd0r5o8ke" path="res://audio/thrust.wav" id="3_wencu"]
[ext_resource type="Script" path="res://scripts/TrackThrusterCameraCartridge.gd" id="4_84jdn"]
[ext_resource type="Script" path="res://scripts/gfx/VectorPolygonRendering.gd" id="4_jt1iv"]
[ext_resource type="Script" path="res://scripts/Hopdart.gd" id="5_71gg3"]
[ext_resource type="Script" path="res://scripts/Gun.gd" id="5_agsoh"]
[ext_resource type="PackedScene" uid="uid://cnn2uxqrtmn78" path="res://packedscenes/bullet.tscn" id="6_qhuna"]
[ext_resource type="Script" path="res://scripts/AttentiveAudio2D.gd" id="6_wtu8y"]
[ext_resource type="Script" path="res://scripts/Anatomy2D.gd" id="6_xawiv"]
[ext_resource type="Script" path="res://scripts/WarpBeam.gd" id="6_y0quo"]
[ext_resource type="AudioStream" uid="uid://gwmuuh2c41u4" path="res://audio/lazerLofi.wav" id="7_2rpq8"]
[ext_resource type="Script" path="res://scripts/PlayerPickupVacuum.gd" id="8_kg1ke"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ntkiv"]
radius = 64.0

[node name="Player" node_paths=PackedStringArray("camera_cartridge", "locomotor", "hopdart", "warp_beam") instance=ExtResource("1_4xi5x")]
freeze_mode = 1
script = ExtResource("2_f7rlf")
camera_cartridge = NodePath("CameraCartridge")
locomotor = NodePath("Locomotor")
hopdart = NodePath("HopDart")
warp_beam = NodePath("Anatomy/WarpBeam")
control_mode = 0
allow_mouse = false
mouse_sensitivity = 1.0
mouse_gravity = 10.0

[node name="CameraCartridge" type="Node2D" parent="." index="0" node_paths=PackedStringArray("locomotor", "hopdart")]
script = ExtResource("4_84jdn")
locomotor = NodePath("../Locomotor")
hopdart = NodePath("../HopDart")
max_relative_speed = 2.0
acceleration_factor = 1.5
lead_distance = 400
rest_vel_damp = 0.9
lead_vel_perp_damp = 0.8
lead_turn_to_rest_ms = 100

[node name="Locomotor" type="Node2D" parent="." index="1"]
script = ExtResource("3_7v3rj")
turn_force = 60.0
max_speed = 1000.0
excessive_speed_linear_damp_factor = 0.98
turn_linear_damp_factor = 0.99
drive_turn_factor = 0.8
fire_turn_factor = 0.95
fire_max_speed_factor = 0.9
fire_acceleration_factor = 0.8
side_boost = 1000.0

[node name="HopDart" type="Node2D" parent="." index="2"]
script = ExtResource("5_71gg3")

[node name="Anatomy" type="Node2D" parent="." index="3"]
script = ExtResource("6_xawiv")
scale_mode = 1

[node name="NEW_TrunkPolygon" type="Polygon2D" parent="Anatomy" index="0"]
editor_description = "visual aspect"
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-6, 6, 6, 6, 0, -6)
script = ExtResource("4_jt1iv")
point_draw_radius = 1.08
draw_line_width = 1.2

[node name="TurnLeftTriangle" type="Polygon2D" parent="Anatomy" index="1"]
visible = false
modulate = Color(0.670588, 0.670588, 0.670588, 1)
position = Vector2(4, 7)
rotation = 3.14159
scale = Vector2(9.5, 9.5)
color = Color(0, 0, 0, 0)
polygon = PackedVector2Array(-0.2, 0.1, 0.2, 0.1, 0, -0.4)
script = ExtResource("4_jt1iv")
circle_draw_color = Color(0.654902, 0.654902, 0.654902, 1)
line_draw_color = Color(0.654902, 0.654902, 0.654902, 1)

[node name="ThrustTriangle" type="Polygon2D" parent="Anatomy" index="2"]
visible = false
modulate = Color(0.670588, 0.670588, 0.670588, 1)
position = Vector2(-1.13687e-12, 10)
rotation = 3.14159
scale = Vector2(9.5, 9.5)
color = Color(0, 0, 0, 0)
polygon = PackedVector2Array(-0.3, 0.5, 0.3, 0.5, 0, -0.857147)
script = ExtResource("4_jt1iv")
circle_draw_color = Color(0.654902, 0.654902, 0.654902, 1)
line_draw_color = Color(0.654902, 0.654902, 0.654902, 1)

[node name="TurnRightTriangle" type="Polygon2D" parent="Anatomy" index="3"]
visible = false
modulate = Color(0.670588, 0.670588, 0.670588, 1)
position = Vector2(-4, 7)
rotation = 3.14159
scale = Vector2(9.5, 9.5)
color = Color(0, 0, 0, 0)
polygon = PackedVector2Array(-0.2, 0.1, 0.2, 0.1, 0, -0.4)
script = ExtResource("4_jt1iv")
circle_draw_color = Color(1, 1, 1, 1)
line_draw_color = Color(0.654902, 0.654902, 0.654902, 1)

[node name="Gun" type="Node2D" parent="Anatomy" index="4" node_paths=PackedStringArray("inherit_velocity", "immune_to_shots", "shot_parent")]
position = Vector2(0, -13.175)
script = ExtResource("5_agsoh")
shot_proto = ExtResource("6_qhuna")
shot_force = 1200.0
cooldown_duration_secs = 0.23
inherit_velocity = NodePath("../..")
immune_to_shots = [NodePath("../..")]
shot_parent = NodePath("../..")

[node name="Lazer" type="AudioStreamPlayer2D" parent="Anatomy/Gun" index="0"]
stream = ExtResource("7_2rpq8")
volume_db = 7.903
bus = &"Effects"

[node name="WarpBeam" type="Node2D" parent="Anatomy" index="5"]
visible = false
script = ExtResource("6_y0quo")
max_reach = 250.0
reach_rate = 2.0
segment_count = 10
prep_req_seconds = 1.5
transversity = 0.9

[node name="Thrust" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource("3_wencu")
volume_db = 7.61
bus = &"Effects"
script = ExtResource("6_wtu8y")

[node name="PickupVacuum" type="Area2D" parent="." index="5"]
disable_mode = 2
collision_layer = 0
collision_mask = 32
gravity_space_override = 4
gravity_point = true
gravity_point_unit_distance = 128.0
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = 512.0
script = ExtResource("8_kg1ke")

[node name="VacuumCollisionShape" type="CollisionShape2D" parent="PickupVacuum" index="0"]
shape = SubResource("CircleShape2D_ntkiv")

[node name="TrunkPolygon" parent="." index="7"]
visible = false

[connection signal="shot_fired" from="." to="Anatomy/Gun" method="shoot"]
[connection signal="driving_state_change" from="Locomotor" to="Anatomy/ThrustTriangle" method="set_visible"]
[connection signal="driving_state_change" from="Locomotor" to="Thrust" method="signal_play_or_stop"]
[connection signal="turning_left_state_change" from="Locomotor" to="Anatomy/TurnLeftTriangle" method="set_visible"]
[connection signal="turning_right_state_change" from="Locomotor" to="Anatomy/TurnRightTriangle" method="set_visible"]
[connection signal="body_entered" from="PickupVacuum" to="PickupVacuum" method="_on_body_entered"]
